--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "primeflex": "^1.0.0-rc.1",
     "primereact": "^3.1.3",
     "primeicons": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "quill": "^1.3.6",
     "@google/maps": "^0.5.5"
   },
