--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,8 @@
     "primeicons": "^1.0.0",
     "font-awesome": "^4.7.0",
     "quill": "^1.3.6",
-    "@google/maps": "^0.5.5"
+    "@google/maps": "^0.5.5",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
